[gd_scene load_steps=12 format=3 uid="uid://bpp0rdwrh3pik"]

[ext_resource type="Script" uid="uid://cxutv25yukggw" path="res://scenes/list.gd" id="1_unhm2"]
[ext_resource type="Texture2D" uid="uid://eiv2yc2xind" path="res://assets/label.svg" id="2_shyfw"]
[ext_resource type="Texture2D" uid="uid://bqf8y2oj3rxps" path="res://assets/install on.svg" id="3_lcbfl"]
[ext_resource type="Texture2D" uid="uid://dlydcl1t2g5y1" path="res://assets/label hover.svg" id="3_shyfw"]
[ext_resource type="Texture2D" uid="uid://kpi3mso5fhmf" path="res://assets/jsfl.svg" id="4_lcbfl"]
[ext_resource type="Texture2D" uid="uid://c8hvxaagd7svn" path="res://assets/install off.svg" id="4_v77n6"]
[ext_resource type="Texture2D" uid="uid://c4ghaac21rmh0" path="res://assets/xml.svg" id="5_3nied"]
[ext_resource type="Texture2D" uid="uid://cvfbfoj7kaysn" path="res://assets/uninstall on.svg" id="5_jc5bs"]
[ext_resource type="Texture2D" uid="uid://chtwfv3n0ns5n" path="res://assets/uninstall off.svg" id="6_3nied"]
[ext_resource type="Texture2D" uid="uid://bda34vbahet0m" path="res://assets/swf.svg" id="6_q8cas"]
[ext_resource type="Texture2D" uid="uid://bbtbnjg7d6yis" path="res://assets/video.svg" id="7_8821m"]

[node name="list" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_unhm2")

[node name="TextureRect" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("2_shyfw")
texture_hover = ExtResource("3_shyfw")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 14.0
offset_top = -1.0
offset_right = 572.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 30
text = "hello world abc def ghi jkl"
clip_text = true

[node name="js" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 662.0
offset_top = 4.0
offset_right = 693.0
offset_bottom = 35.0
texture = ExtResource("4_lcbfl")

[node name="xml" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 696.0
offset_top = 4.0
offset_right = 727.0
offset_bottom = 35.0
texture = ExtResource("5_3nied")

[node name="swf" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 730.0
offset_top = 4.0
offset_right = 761.0
offset_bottom = 35.0
texture = ExtResource("6_q8cas")

[node name="video" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 764.0
offset_top = 4.0
offset_right = 795.0
offset_bottom = 35.0
texture = ExtResource("7_8821m")

[node name="install" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("3_lcbfl")
texture_pressed = ExtResource("4_v77n6")
texture_disabled = ExtResource("4_v77n6")

[node name="uninstall" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("5_jc5bs")
texture_pressed = ExtResource("6_3nied")
texture_disabled = ExtResource("6_3nied")

[connection signal="pressed" from="TextureRect" to="." method="_on_texture_rect_pressed"]
[connection signal="mouse_entered" from="install" to="." method="_on_install_mouse_entered"]
[connection signal="mouse_exited" from="install" to="." method="_on_install_mouse_exited"]
[connection signal="pressed" from="install" to="." method="_on_install_pressed"]
[connection signal="mouse_entered" from="uninstall" to="." method="_on_uninstall_mouse_entered"]
[connection signal="mouse_exited" from="uninstall" to="." method="_on_uninstall_mouse_exited"]
[connection signal="pressed" from="uninstall" to="." method="_on_uninstall_pressed"]
